Bug 100115 - [Qt] Text with zero font size renders as X px sometimes, causing fast/text/zero-font-size-2.html to fail
Summary: [Qt] Text with zero font size renders as X px sometimes, causing fast/text/ze...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 420+
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 87008 99918
  Show dependency treegraph
 
Reported: 2012-10-23 06:22 PDT by Csaba Osztrogonác
Modified: 2012-10-29 07:47 PDT (History)
6 users (show)

See Also:


Attachments
copy/paste fix (1.27 KB, patch)
2012-10-23 06:27 PDT, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff
patch (2.85 KB, patch)
2012-10-23 07:17 PDT, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-10-23 06:22:33 PDT
fast/text/zero-font-size-2.html intoduced in https://trac.webkit.org/changeset/131995
and fails on Qt, because r131995 fixed the bug for Mac only.

diff: http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r132209%20%2844199%29/fast/text/zero-font-size-2-diffs.html

Original bug: https://bugs.webkit.org/show_bug.cgi?id=99918
Similar Chomium bug: https://bugs.webkit.org/show_bug.cgi?id=99920
Comment 1 Csaba Osztrogonác 2012-10-23 06:27:26 PDT
Created attachment 170143 [details]
copy/paste fix

I don't know anything about font handling, but copy/pasting the code 
from https://bugs.webkit.org/show_bug.cgi?id=100115 fixed this test.
(And it didn't cause new layout test failures of course.)
Comment 2 WebKit Review Bot 2012-10-23 06:34:31 PDT
Comment on attachment 170143 [details]
copy/paste fix

Attachment 170143 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/14482970
Comment 3 Csaba Osztrogonác 2012-10-23 06:36:16 PDT
Comment on attachment 170143 [details]
copy/paste fix

CQ again, chromium EWS is buggy.
Comment 4 Csaba Osztrogonác 2012-10-23 07:17:06 PDT
Created attachment 170158 [details]
patch
Comment 5 Csaba Osztrogonác 2012-10-25 03:42:03 PDT
ping?
Comment 6 Csaba Osztrogonác 2012-10-29 07:37:31 PDT
ping?
Comment 7 WebKit Review Bot 2012-10-29 07:47:54 PDT
Comment on attachment 170158 [details]
patch

Clearing flags on attachment: 170158

Committed r132802: <http://trac.webkit.org/changeset/132802>
Comment 8 WebKit Review Bot 2012-10-29 07:47:58 PDT
All reviewed patches have been landed.  Closing bug.