[Qt] Text with zero font size renders as X px sometimes, causing fast/text/zero-font-size-2.html to fail https://bugs.webkit.org/show_bug.cgi?id=100115

Reviewed by Noam Rosenthal.

Source/WebCore:

* platform/graphics/qt/FontQt.cpp:
(WebCore::Font::drawGlyphs):

LayoutTests:

* platform/qt/TestExpectations: Unskip fast/text/zero-font-size-2.html.


Canonical link: https://commits.webkit.org/118705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132802 268f45cc-cd09-0410-ab3c-d52691b4dbfc